# planning_suturo_1718

./: .gitignore  .gitmodules  .gitmodules~  .rosinstall  README.md  pr2_nav_pcontroller2.launch
Object_Detection/: CMakeLists.txt  package.xml
Object_Detection/msg/: Object_Detection.msg~
Object_Detection/srv/: Poke_Object.srv  Poke_Object.srv~
Planning_knowledge/: package.xml~  planning-knowledge.asd~
common/: README.md
common/navigation/: amcl_node.xml  localization.launch  upload_map.launch
knowledge/: CMakeLists.txt  package.xml
knowledge/launch/: knowledge.launch
knowledge/owl/: suturo_object.owl
knowledge/prolog/: init.pl  poke_position_calculator.pl~
knowledge/src/: poke_service_node.cpp  test_client.cpp
knowledge_msgs/: CMakeLists.txt  package.xml
knowledge_msgs/srv/: GetFixedKitchenObjects.srv  LogFinishAction.srv  LogStartAction.srv
knowrob/knowrob_map_data/launch/: ias_semantic_map.launch
knowrob/knowrob_srdl/owl/: sim-hand.owl  xsens-human.owl
motion_msgs/: CMakeLists.txt  package.xml
motion_msgs/action/: MovingCommand.action
object_detection/: CMakeLists.txt
object_detection/launch/: main_sim.launch
object_detection/msg/: ObjectDetection.msg
object_detection/srv/: PokeObject.srv
planning_files/: README.md
planning_files/maps (ssh)/: localization.launch  upload_map.launch
planning_knowledge/: planning-knowledge.asd
planning_knowledge/src/: #ask.lisp#  #ptu.lisp#~  ask.fasl  ask.lisp  package.lisp~  ptu.lisp~
planning_logic/: planning-logic.asd
planning_logic/src/: logic.lisp
planning_main_programm/: CMakeLists.txt  package.xml  package.xml~  planning-main-programm.asd  planning-main-programm.asd~
planning_main_programm/src/: #main.lisp#  callmotion~  main.fasl  main.lisp  package.lisp  package.lisp~  ptu.lisp~
planning_motion/: CMakeLists.txt  package.xml~  planning-motion.asd  planning-motion.asd~  planning-nod-head.asd~
planning_motion/src/: #actions.lisp#  .#ptu.lisp  actions.fasl  actions.lisp  actions.lisp~  package.lisp~  ptu.lisp~
planning_move/: package.xml  planning-move.asd  planning-move.asd~
planning_move/src/: movement.lisp  package.lisp  package.lisp~  ptu_motion.lisp~
planning_nod_head/: CMakeLists.txt  package.xml  planning-nod-head.asd
planning_nod_head/src/: callmotion.lisp~  package.lisp  ptu.fasl  ptu.lisp  ptu.lisp~
planning_programm/: README.md
planning_programm/planning_demo/: CMakeLists.txt  package.xml  planning-demo.asd
planning_programm/planning_demo/src/: demo.lisp  package.lisp
planning_programm/planning_error/: CMakeLists.txt  package.xml  planning-error.asd
planning_programm/planning_error/src/: #error-hierarchy.lisp#  error-hierarchy.lisp  package.lisp
planning_programm/planning_interaction/: README.md  package.xml
planning_programm/planning_interaction/src/: interaction.lisp  package.lisp
planning_programm/planning_knowledge/: CMakeLists.txt  package.xml  planning-knowledge.asd
planning_programm/planning_knowledge/src/: #knowledge-communicate.lisp#  .#knowledge-communicate.lisp  knowledge-communicate.lisp  package.lisp
planning_programm/planning_logic/: CMakeLists.txt  package.xml  planning-logic.asd
planning_programm/planning_logic/src/: #external-logic.lisp#  .#external-logic.lisp  external-logic.lisp  package.lisp
planning_programm/planning_main/: CMakeLists.txt  package.xml  planning-main.asd
planning_programm/planning_main/src/: #main.lisp#  .#main.lisp  main.lisp  package.lisp
planning_programm/planning_motion/: package.xml  planning-motion.asd
planning_programm/planning_motion/src/: #actions.lisp#  #motion-actions.lisp#  .#motion-actions.lisp  motion-actions.lisp  (+1 more)
planning_programm/planning_move/: CMakeLists.txt  package.xml  planning-move.asd
planning_programm/planning_objects/: CMakeLists.txt  package.xml  planning-objects.asd
planning_programm/planning_old/: CMakeLists.txt  package.xml  planning-old.asd
planning_programm/planning_vision/: package.xml  planning-vision.asd
planning_vision/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  planning-motion.asd~  planning-vision.asd  planning-vision.asd~
planning_vision/src/: package.lisp  package.lisp~  points.fasl  points.lisp  ptu.lisp~
vision_msgs/: CMakeLists.txt  package.xml
vision_msgs/msg/: ObjectInformation.msg
vision_msgs/srv/: GetObjectInfo.srv
(+209 files in other folders)
