<?xml version="1.0"?>
<package>
  <name>planning_logic</name>
  <version>0.4.0</version>
  <description>planning_main_programm</description>
  <author>Kevin Störmer, Vanessa Hassouna, Hauke Tietjen</author>
  <maintainer email="stoermer@uni-bremen.de">Kevin Störmer, Vanessa Hassouna, Hauke Tietjen</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roslisp</buildtool_depend>
  <buildtool_depend>cl_tf</buildtool_depend>
  <buildtool_depend>actionlib_lisp</buildtool_depend>
  <buildtool_depend>geometry_msgs</buildtool_depend>
  <buildtool_depend>pr2_controllers_msgs</buildtool_depend>
  <buildtool_depend>motion_msgs</buildtool_depend>
  <buildtool_depend>object_detection</buildtool_depend>
  <buildtool_depend>planning_motion</buildtool_depend>
  <buildtool_depend>planning_knowledge</buildtool_depend>
  <buildtool_depend>planning_vision</buildtool_depend>
  <buildtool_depend>planning_move</buildtool_depend>
  <buildtool_depend>cram-language</buildtool_depend>

</package>
